bug fix, lower contrast

--- a/vars.css
+++ b/vars.css
@@ -1,6 +1,6 @@
 :root
 {
-    --background-color-dark-mode: #080808;
+    --background-color-dark-mode: #181818;
     --color-dark-mode: #ebebeb;
     --subheader-dark-mode: #d2d2d2;
     --border-color-dark-mode: #353535;
